--- a/backend/package.json
+++ b/backend/package.json
@@ -7,31 +7,27 @@
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "test": "jest --coverage",
-    "test:watch": "jest --watch"
+    "build": "echo 'No build step required for Node.js backend'"
   },
-  "keywords": [
-    "ai",
-    "chatbot",
-    "property",
-    "real-estate"
-  ],
+  "engines": {
+    "node": ">=16.0.0",
+    "npm": ">=8.0.0"
+  },
+  "keywords": ["ai", "chatbot", "property", "real-estate"],
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.13.0",
+    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "csv-parser": "^3.2.0",
-    "dotenv": "^16.6.1",
-    "express": "^4.21.2",
-    "helmet": "^7.2.0",
-    "openai": "^4.104.0"
+    "dotenv": "^16.3.1",
+    "csv-parser": "^3.0.0",
+    "openai": "^4.20.0",
+    "axios": "^1.6.0",
+    "helmet": "^7.1.0"
   },
   "devDependencies": {
+    "nodemon": "^3.0.1",
     "jest": "^29.7.0",
-    "nodemon": "^3.1.10",
-    "supertest": "^6.3.4"
-  },
-  "engines": {
-    "node": ">=16.0.0"
+    "supertest": "^6.3.3"
   }
 }
