--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=https://nobrokerage-chatbot-backend.azurewebsites.net
+REACT_APP_API_URL=https://nobrokerage-chatbot-backend-fxa6b5dmbsbbdrdz.centralindia-01.azurewebsites.net/
