fix: Disable CI warnings as errors for Azure deployment

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,3 @@
+GENERATE_SOURCEMAP=false
+CI=false
 REACT_APP_API_URL=https://nobrokerage-chatbot-backend-fxa6b5dmbsbbdrdz.centralindia-01.azurewebsites.net/
